# wallet

./: .env.example  .env.prod  .gitignore  CONTRIBUTING.md  Cargo.toml  POSTMESSAGE_PROTOCOL.md  PRIVACY  README.md  TERMS  Trunk.toml  build-js.js  hot-wallet-connector-iframe.html  index.html  intear-wallet-11da4e2c30604867.js  intear-wallet-15f314c01f24db95.js  intear-wallet-16b4945d006aa4c1.js  intear-wallet-1ae400d45a8069f4.js  intear-wallet-1ae400d45a8069f4_bg.wasm  intear-wallet-1dcd3065151914e5.js  intear-wallet-1eb0f0d238b7722a.js  intear-wallet-1f23f4751495e3a6.js  intear-wallet-1fc766c5c4df93f4.js  intear-wallet-2079ec90d2a85c74.js  intear-wallet-271d00fa960c2fd5.js  intear-wallet-2a1e82448dba24f1.js  intear-wallet-2a29f0015bed97fc.js  intear-wallet-2a29f0015bed97fc_bg.wasm  intear-wallet-320c6bb55dd4ad84.js  intear-wallet-33cbd9f7ade1a8f6.js  intear-wallet-350b7a17135f10bc.js  intear-wallet-3516da6b6524a8b5.js  intear-wallet-3530a4320ef05bda.js  intear-wallet-372d9da3c9b825b4.js  intear-wallet-38942501e3b855b4.js  intear-wallet-3b78f5b4526733a2.js  intear-wallet-3eb4ee1b61b5c046.js  intear-wallet-40f0e1f4821880ae.js  intear-wallet-433bc36ed7969a67.js  intear-wallet-44cfe18cf1ddf874.js  intear-wallet-457dc2f5cca928ac.js  (+166 more)
.cargo/: config.toml
account-creation-service/: .env.example  Cargo.toml  README.md  relayers.example.json
account-creation-service/src/: main.rs  router.rs
ai-tools-service/: .env.example  Cargo.toml
ai-tools-service/src/: main.rs
app/: Cargo.toml
history-service/: .env.example  Cargo.toml  README.md
history-service/src/: main.rs
js/: EthereumConnector-2LVFI7OR.js  EthereumConnector-3ZHK6U3K.js  EthereumConnector-4ILULB2X.js  EthereumConnector-6PIWWK5X.js  EthereumConnector-7OGIYPYF.js  EthereumConnector-B3P7XWZU.js  EthereumConnector-D3NPEYF7.js  EthereumConnector-IUCFG4XT.js  EthereumConnector-PA7DSA43.js  EthereumConnector-SLU6F27K.js  EthereumConnector-ZQMMWPRF.js  EthereumWalletConnector-GK2J6ZJE.js  EthereumWalletConnector-IAHSHFKO.js  PhArrowCircleDown-IEXXWQED.js  PhArrowClockwise-JWGTWVIL.js  PhArrowDown-2EUGOGAM.js  PhArrowLeft-FGLX2QDS.js  PhArrowRight-RPWIDUCV.js  PhArrowSquareOut-IMZQK6J4.js  PhArrowUp-RSWGSMQW.js  PhArrowUpRight-4UHKVOE7.js  PhArrowsClockwise-AYSDWPLT.js  PhArrowsDownUp-7GD4KL6W.js  PhArrowsLeftRight-Z3ZECCBL.js  PhBank-2B7BHRIN.js  PhBrowser-LS2TT2NH.js  PhCaretDown-NJWBWI6R.js  PhCaretLeft-XYGU26UE.js  PhCaretRight-Y2FNN4PV.js  PhCaretUp-TDAZN2GV.js  PhCheck-VSHL2VI5.js  PhCircleHalf-O7VOU72W.js  PhClock-Q6LG7D43.js  PhCompass-3HKK6Y2T.js  PhCopy-PAJGH56V.js  PhCreditCard-VRWIJMTU.js  PhCurrencyDollar-JWH6A5TW.js  PhDesktop-LTSKGZMC.js  PhDeviceMobile-CMTPUMYS.js  PhDotsThree-X75DPDKB.js  (+772 more)
logout-bridge-service/: .env.example  Cargo.toml  README.md
near-min-api/: Cargo.toml  README.md
nft-proxy-service/: .example.env  Cargo.toml  README.md
nft-proxy-service/src/: main.rs
password-storage-service/: .env.example  Cargo.toml  README.md
password-storage-service/src/: main.rs
patches/: argon2+0.5.3.patch  icondata_si+0.0.10.patch  leptos+0.8.6.patch  leptos+0.8.8.patch
pkg/: __wasm_split.______________________.js  __wasm_split_manifest.json  account_settings_view_11497074213207055331.4hqjBkGpjBUX49Kx6_eIbA.wasm  account_settings_view_11497074213207055331.7yljyrp2d_wmc84zP4miog.wasm  account_settings_view_11497074213207055331.FkMdAu85w5lIE5S5mCQdpA.wasm  account_settings_view_11497074213207055331.HJKMMWlZf-_icnJAX2aVJw.wasm  account_settings_view_11497074213207055331.RLsDY0SZMhb6hW8AuHzXYQ.wasm  account_settings_view_11497074213207055331.WCMharc7Ereq4V1CNfJGWA.wasm  account_settings_view_11497074213207055331.W_i4p-DBqPFg1X6lER0iWA.wasm  (+2181 more)
server/: Cargo.toml  README.md
server/src/: main.rs
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
web/: Cargo.toml  build.rs
web/public/: hot-wallet-connector-iframe.html  near-selector.js  service_worker.js  wallet-connector-iframe.html
web/src/: lib.rs  utils.rs
web/src/components/: account_creation_form.rs  account_selector.rs  bridge_history.rs  bridge_termination_screen.rs  copy_button.rs  copyable_address.rs  danger_confirm_input.rs  derivation_path_input.rs  explore_components.rs  gift_amount_display.rs  gift_modals.rs  header.rs  layout.rs  legal_consents.rs  login_form.rs  mod.rs  number_format_settings.rs  password_unlock.rs  progressive_image.rs  projected_revenue.rs  qrcode_display.rs  quick_actions.rs  seed_phrase_input.rs  select.rs  send_modals.rs  swap_for_gas_modal.rs  toggle_switch.rs  token_balance_list.rs  token_selector.rs  tooltip.rs  total_portfolio_value.rs  transaction_modals.rs  transaction_queue_overlay.rs  wallet_header.rs  wallet_quick_actions.rs
web/src/contexts/: account_selector_context.rs  accounts_context.rs  config_context.rs  connected_apps_context.rs  legal_consents_context.rs  mod.rs  modal_context.rs  network_context.rs  nft_cache_context.rs  rpc_context.rs  security_log_context.rs  tokens_context.rs  transaction_queue_context.rs  translation_context.rs
web/src/data/: bridge_networks.rs  learn.rs  mod.rs  protocols.rs
web/src/data/translations/: en.json  uk.json  vi.json
web/src/js/: index.ts  index.tsx  intearwallet-connect.js  near-selector-globals.js  near-selector.js  qr-generator.js  utils.js
web/src/js/near-ledger-js/: index.js  supportedTransports.js
web/src/pages/: auto_import_secret_key.rs  bridge.rs  connect.rs  explore.rs  gift_claim.rs  gifts.rs  history.rs  home.rs  invoices.rs  login.rs  mod.rs  nfts.rs  receive.rs  receivebridge.rs  send.rs  send_transactions.rs  sendbridge.rs  sign_message.rs  stake.rs  swap.rs  token.rs  wrap.rs
web/src/pages/settings/: account.rs  address_book.rs  connected_apps.rs  developer.rs  developer_create_token.rs  developer_sandbox.rs  language_editor.rs  mod.rs  preferences.rs  security.rs  security_log.rs
web/src/pages/settings/create_token_modals/: aidols_modal.rs  intear_launch_modal.rs  meme_cooking_modal.rs  mod.rs  without_launchpad_modal.rs
web/src/translations/: mod.rs
(+105 files in other folders)
