[[workspace.metadata.leptos]]
name = "intear-wallet"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 5678
browserquery = "defaults"
env = "DEV"
bin-package = "server"
lib-package = "app"
tailwind-input-file = "style/styles.css"
assets-dir = "app/public"
wasm-opt-features = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--dce",
    "--remove-unused-brs",
    "--merge-similar-functions",
    "--dae",
]

[workspace.metadata.dylint]
libraries = [
    { git = "https://github.com/leptos-rs/leptos-lints", tag = "v0.1.0" },
]

[profile.dev.package.argon2]
opt-level = 3

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
members = [
    "near-min-api",
    "history-service",
    "account-creation-service",
    "logout-bridge-service",
    "password-storage-service",
    "nft-proxy-service",
    "server",
    "app",
]
resolver = "3"

[patch.crates-io]
argon2 = { path = "./target/patch/argon2-0.5.3" }
