[[workspace.metadata.leptos]]
name = "intear-wallet"
site-root = "dist"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 5678
browserquery = "defaults"
env = "DEV"
bin-package = "server"
lib-package = "web"
tailwind-input-file = "style/styles.css"
assets-dir = "web/public"
wasm-opt-features = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--dce",
    "--remove-unused-brs",
    "--merge-similar-functions",
    "--dae",
]
hash-files = true

[profile.dev.package.argon2]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = [
    "near-min-api",
    "history-service",
    "account-creation-service",
    "logout-bridge-service",
    "password-storage-service",
    "nft-proxy-service",
    "ai-tools-service",
    "server",
    "web",
    "src-tauri",
]
resolver = "3"

[patch.crates-io]
argon2 = { path = "./target/patch/argon2-0.5.3" }
leptos = { path = "./target/patch/leptos-0.8.8" }
