[package]
name = "account-creation-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
near-min-api = { path = "../near-min-api" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["json"] }
dotenv = "0.15.0"
rand = "0.8.5"
alloy-primitives = { version = "1.1.2", features = ["serde"] }
solana-signature = { version = "2.3.0", features = ["serde"] }
