[package]
name = "ai-tools-service"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
axum = { version = "0.8.3", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rustyscript = "0.12"
