[package]
name = "nft-proxy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = { version = "0.12.15", features = ["multipart"] }
dotenv = "0.15.0"
moka = { version = "0.12.10", features = ["future"] }
url = "2.5.2"
bytes = "1.6.1"
http = "1.1.0"
percent-encoding = "2.3.1"
image = { version = "0.25.1", default-features = false, features = [
    "webp",
    "png",
    "jpeg",
    "gif",
] }
rocksdb = "0.23.0"
near-min-api = { path = "../near-min-api" }
nanoid = "0.4.0"
teloxide = { version = "0.12.2", features = ["macros"] }
anyhow = "1.0.86"
base64 = "0.22.1"
