[package]
name = "password-storage-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tower-http = { version = "0.6.2", features = ["cors"] }
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rocksdb = "0.23.0"
dotenvy = "0.15.7"
nanoid = "0.4.0"
