[package]
name = "app"
version = "0.1.0"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
rand = "0.8"
base64 = "0.22.1"
tauri-plugin-deep-link = "2"
anyhow = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
