[package]
name = "app"
version = "0.1.0"
edition = "2024"

[package.metadata.patch]
crates = ["android-native-keyring-store"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-plugin-log = "2"
rand = "0.8"
base64 = "0.22.1"
tauri-plugin-deep-link = "2"
anyhow = "1"
tauri-plugin-os = "2"
tokio = { version = "1", default-features = false }
tauri-plugin-opener = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
ledger-lib = { version = "0.1.0", default-features = false, features = [
    "transport_usb",
    "transport_tcp",
    "transport_ble",
    "transport_usb_libusb",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "0.2.0", features = [
    "crypto-rust",
] }
keyring-core = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.1", features = ["keychain"] }
keyring-core = "0.7.0"

[target.'cfg(target_os = "ios")'.dependencies]
apple-native-keyring-store = { version = "0.2.1", features = ["protected"] }
keyring-core = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.2.0"
keyring-core = "0.7.0"

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.4.0"
keyring-core = "0.6.0"
jni = "0.21"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-app-events = "=0.2.0"
tauri-plugin-biometric = "2"
