[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Slime <4sliman4@gmail.com>"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.8.6", features = ["nightly"] }
console_log = "1.0.0"
log = "0.4.27"
console_error_panic_hook = "0.1.7"
leptos_icons = "0.7.0"
icondata = { version = "0.6.0", features = [
    "lucide",
    "simple-icons",
], default-features = false }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Navigator",
    "Clipboard",
    "Storage",
    "StorageEvent",
    "Performance",
    "TouchEvent",
    "Touch",
    "TouchList",
    "StorageManager",
    "ScrollIntoViewOptions",
    "HtmlAudioElement",
] }
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
lazy_static = "1.5.0"
# Not actually needed for the wallet, but need to add a feature in transitive dependencies
getrandom = { version = "0.2", features = ["js"] }
near-min-api = { path = "../near-min-api" }
rand = "0.8.5"
chrono = "0.4.40"
futures-timer = { version = "3", features = ["wasm-bindgen"] }
cached = { version = "0.55.1", features = ["wasm", "async"] }
base64 = "0.22.1"
bip39 = { version = "2.1.0", features = ["rand"] }
ed25519-dalek = { version = "2.1.1", default-features = false }
slipped10 = "0.4.6"
argon2 = "0.5.3"
aes-gcm = "0.10.3"
leptos-use = { version = "0.16.2", features = [
    "use_websocket",
    "use_event_listener",
    "use_window",
    "use_document",
    "use_intersection_observer",
] }
codee = "0.3.0"
json-filter = "0.1.1"
dotenvy_macro = "0.15.7"
serde-wasm-bindgen = "0.6.5"
futures-channel = "0.3.31"
borsh = "1.5.7"
shell-words = "1.1.0"
deli = "0.2.0"
bs58 = "0.5.1"
solana-pubkey = { version = "2.4.0", features = ["serde"] }
solana-keypair = { version = "2.2.1", features = [] }
solana-signer = "2.2.1"
solana-signature = { version = "2.3.0", features = [
    "serde",
    "verify",
], default-features = false }
alloy-primitives = { version = "1.1.2", features = [
    "serde",
    "k256",
], default-features = false }
alloy-signer = "1.0.8"
alloy-signer-local = "1.0.8"
bigdecimal = { version = "0.4.8", features = ["serde-json"] }
thaw = { version = "0.5.0-beta", features = ["csr", "nightly"] }
percent-encoding = "2.3.1"
wasm-bindgen-futures = "0.4.35"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }

[package.metadata.patch]
crates = [
    # Need to add async interruptions to not block the main
    # thread for too long and make it abortable
    "argon2",
    # Don't pull leptos_config in CSR builds which pulls regex
    "leptos",
]
